apps/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - port: 80
      targetPort: 80
      name: web
      protocol: TCP
    - port: 443
      targetPort: 443
      name: websecure
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  selector:
    app: traefik
  ports:
    - port: 8080
      targetPort: 8080
      name: dashboard
      protocol: TCP
